# react-vite-fastapi-template

./: .env.example  .gitignore  README.md  docker-compose.yml
.cursor/rules/: global.mdc
.cursor/rules/dev-rules/: fastapi.mdc  react-vite.mdc  structure.mdc  techstack.mdc  uiux.mdc
backend/: pyproject.toml
backend/app/: main.py
backend/app/domain/repositories/: user_repository.py
backend/app/domain/user/: __init__.py  entity.py  repository.py  service.py
backend/app/infrastructure/auth/: auth_factory.py  cognito_auth.py  mock_auth.py
backend/app/infrastructure/repositories/: dynamodb_user_repository.py
backend/app/interfaces/api/v1/: auth.py  dependencies.py  users.py
backend/app/middleware/: logging_middleware.py
backend/app/usecases/user_management/: department_transfer.py  team_assignment.py
docker/backend/: Dockerfile
docker/frontend/: Dockerfile
frontend/: package.json
frontend/src/: App.tsx  theme.ts
frontend/src/components/layout/: DashboardLayout.tsx
frontend/src/pages/: Login.tsx
frontend/src/services/: auth.service.ts
frontend/src/stores/: auth.store.ts
frontend/src/types/: auth.ts
infra/: template.yaml
